--- a/News API/View/Base.lproj/Main.storyboard
+++ b/News API/View/Base.lproj/Main.storyboard
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="uME-N0-ILP">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="KSV-tT-Eqx">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -16,7 +17,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="Q4u-57-saG">
-                                <rect key="frame" x="5" y="137" width="404" height="720"/>
+                                <rect key="frame" x="5" y="137" width="404" height="671"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="fQA-v7-GPI">
                                     <size key="itemSize" width="50" height="50"/>
@@ -54,7 +55,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1047.8260869565217" y="137.94642857142856"/>
+            <point key="canvasLocation" x="1957.9710144927537" y="137.94642857142856"/>
         </scene>
         <!--HeadlinesVC-->
         <scene sceneID="UEj-Sb-SsL">
@@ -131,27 +132,50 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="cVp-i4-b8U" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1853" y="136"/>
+            <point key="canvasLocation" x="2762.3188405797105" y="135.9375"/>
         </scene>
-        <!--View Controller-->
-        <scene sceneID="9BY-oY-ssi">
+        <!--Article DetailsVC-->
+        <scene sceneID="d7i-YU-Zcc">
             <objects>
-                <viewController id="wii-OX-81v" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="jGq-OC-FGP">
+                <viewController storyboardIdentifier="articleDetailsVC" id="LzS-qk-HcJ" customClass="ArticleDetailsVC" customModule="News_API" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="dWq-9F-zb8">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="e00-mb-kaB">
+                                <rect key="frame" x="63" y="236" width="288" height="369"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                                <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gMi-xo-2uo">
+                                <rect key="frame" x="94" y="171" width="42" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                        <viewLayoutGuide key="safeArea" id="Yyf-ky-k55"/>
+                        <viewLayoutGuide key="safeArea" id="Fao-St-GYN"/>
                     </view>
+                    <connections>
+                        <outlet property="articleText" destination="e00-mb-kaB" id="4gn-qr-y9q"/>
+                        <outlet property="articleTitleLabel" destination="gMi-xo-2uo" id="eCs-ek-94k"/>
+                    </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="oKx-Ep-G3c" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Irf-TS-ubb" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2592" y="138"/>
+            <point key="canvasLocation" x="3518.840579710145" y="135.9375"/>
         </scene>
-        <!--Navigation Controller-->
+        <!--Sources-->
         <scene sceneID="VUc-a2-zKl">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="uME-N0-ILP" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Sources" image="house" catalog="system" selectedImage="house" id="yp3-Pu-ZmW"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="JkQ-W7-Jr5">
                         <rect key="frame" x="0.0" y="44" width="414" height="44"/>
@@ -164,7 +188,96 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="l7c-2F-GyZ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1047.8260869565217" y="137.94642857142856"/>
+        </scene>
+        <!--SourcesVC-->
+        <scene sceneID="egf-Jj-X6M">
+            <objects>
+                <viewController id="wpj-jO-AU6" customClass="SourcesVC" customModule="News_API" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="ORv-eX-xr3">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="rDA-lZ-dic" userLabel="Source CollectionView">
+                                <rect key="frame" x="0.0" y="88" width="414" height="725"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="w10-zX-8PX">
+                                    <size key="itemSize" width="50" height="50"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="v89-VD-DC4">
+                                        <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="Z2D-rb-mJB">
+                                            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </collectionViewCellContentView>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="n1w-CH-6Ju" firstAttribute="bottom" secondItem="rDA-lZ-dic" secondAttribute="bottom" id="LYX-Vj-K6d"/>
+                            <constraint firstItem="rDA-lZ-dic" firstAttribute="top" secondItem="n1w-CH-6Ju" secondAttribute="top" id="a2t-6S-m9X"/>
+                            <constraint firstItem="rDA-lZ-dic" firstAttribute="leading" secondItem="n1w-CH-6Ju" secondAttribute="leading" id="gVG-c1-nz5"/>
+                            <constraint firstItem="n1w-CH-6Ju" firstAttribute="trailing" secondItem="rDA-lZ-dic" secondAttribute="trailing" id="kSK-DK-VQR"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="n1w-CH-6Ju"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="6If-nu-bMz"/>
+                    <connections>
+                        <outlet property="sourcesCollectionView" destination="rDA-lZ-dic" id="oet-IW-Rsu"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="x2q-z7-CYy" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1913.0434782608697" y="839.73214285714278"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="IcA-sK-jcj">
+            <objects>
+                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="KSV-tT-Eqx" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="dcw-7I-1vK">
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="uME-N0-ILP" kind="relationship" relationship="viewControllers" id="rvQ-a5-gbJ"/>
+                        <segue destination="Sgj-S2-pGA" kind="relationship" relationship="viewControllers" id="kDU-57-0nz"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Cxk-Tx-OOA" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
             <point key="canvasLocation" x="137.68115942028987" y="137.94642857142856"/>
         </scene>
+        <!--News by Sources-->
+        <scene sceneID="ik8-YZ-Pug">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Sgj-S2-pGA" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="News by Sources" image="tray.2" catalog="system" selectedImage="tray.2.fill" id="fFC-h8-ZUM"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="so2-ik-RCe">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="wpj-jO-AU6" kind="relationship" relationship="rootViewController" id="M84-G9-Mad"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="PZg-X3-b0I" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1002.8985507246377" y="839.73214285714278"/>
+        </scene>
     </scenes>
+    <resources>
+        <image name="house" catalog="system" width="64" height="54"/>
+        <image name="tray.2" catalog="system" width="64" height="56"/>
+        <image name="tray.2.fill" catalog="system" width="64" height="56"/>
+    </resources>
 </document>
