--- a/News API/View/CategoryCell.xib
+++ b/News API/View/CategoryCell.xib
@@ -10,29 +10,43 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="categoryCell" id="gTV-IL-0wX" customClass="CategoryCell" customModule="News_API" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+            <rect key="frame" x="0.0" y="0.0" width="150" height="150"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                <rect key="frame" x="0.0" y="0.0" width="150" height="150"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lmH-if-iAF" userLabel="CategoryName">
-                        <rect key="frame" x="4" y="15" width="42" height="20.5"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="m3C-mv-XGq" userLabel="CellView">
+                        <rect key="frame" x="0.0" y="0.0" width="150" height="150"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lmH-if-iAF" userLabel="CategoryName">
+                                <rect key="frame" x="4" y="65" width="142" height="20.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <constraints>
+                            <constraint firstItem="lmH-if-iAF" firstAttribute="centerX" secondItem="m3C-mv-XGq" secondAttribute="centerX" id="0Wg-Bb-Eq7"/>
+                            <constraint firstAttribute="width" constant="150" id="2qw-oj-Zby"/>
+                            <constraint firstItem="lmH-if-iAF" firstAttribute="leading" secondItem="m3C-mv-XGq" secondAttribute="leading" constant="4" id="2rg-hf-6gt"/>
+                            <constraint firstAttribute="trailing" secondItem="lmH-if-iAF" secondAttribute="trailing" constant="4" id="Rnm-2H-3cG"/>
+                            <constraint firstAttribute="height" constant="150" id="dTb-fw-ltq"/>
+                            <constraint firstItem="lmH-if-iAF" firstAttribute="centerY" secondItem="m3C-mv-XGq" secondAttribute="centerY" id="eOq-Fa-R5j"/>
+                        </constraints>
+                    </view>
                 </subviews>
             </view>
             <constraints>
-                <constraint firstItem="lmH-if-iAF" firstAttribute="centerX" secondItem="gTV-IL-0wX" secondAttribute="centerX" id="HUN-WW-NNZ"/>
-                <constraint firstItem="lmH-if-iAF" firstAttribute="centerY" secondItem="gTV-IL-0wX" secondAttribute="centerY" id="eOk-GD-Hj6"/>
+                <constraint firstItem="m3C-mv-XGq" firstAttribute="centerX" secondItem="gTV-IL-0wX" secondAttribute="centerX" id="bpq-QT-AD2"/>
+                <constraint firstItem="m3C-mv-XGq" firstAttribute="centerY" secondItem="gTV-IL-0wX" secondAttribute="centerY" id="fza-QI-kt6"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
+            <size key="customSize" width="150" height="150"/>
             <connections>
                 <outlet property="categoryLabelName" destination="lmH-if-iAF" id="8Rb-Zm-3EM"/>
             </connections>
-            <point key="canvasLocation" x="139" y="153"/>
+            <point key="canvasLocation" x="210.1449275362319" y="186.16071428571428"/>
         </collectionViewCell>
     </objects>
 </document>
