--- a/News API/View/Base.lproj/Main.storyboard
+++ b/News API/View/Base.lproj/Main.storyboard
@@ -77,16 +77,13 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Headline" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1p1-r4-X1I" userLabel="Headline">
-                                                    <rect key="frame" x="25" y="16" width="242" height="95"/>
+                                                    <rect key="frame" x="25" y="16" width="67.5" height="95"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="rop-Y1-PPC">
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="rop-Y1-PPC">
                                                     <rect key="frame" x="277" y="5" width="130" height="130"/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="width" secondItem="rop-Y1-PPC" secondAttribute="height" multiplier="1:1" id="elV-IU-6LM"/>
-                                                    </constraints>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Source" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mo2-18-4wz">
                                                     <rect key="frame" x="25" y="112.5" width="40" height="14.5"/>
@@ -103,7 +100,6 @@
                                                 <constraint firstItem="rop-Y1-PPC" firstAttribute="top" secondItem="mHN-Xv-azh" secondAttribute="top" constant="5" id="Vg2-uL-XDM"/>
                                                 <constraint firstAttribute="bottomMargin" secondItem="mo2-18-4wz" secondAttribute="bottom" constant="2" id="dOg-xT-w9R"/>
                                                 <constraint firstAttribute="trailing" secondItem="rop-Y1-PPC" secondAttribute="trailing" constant="7" id="dPW-6j-BKc"/>
-                                                <constraint firstItem="rop-Y1-PPC" firstAttribute="leading" secondItem="1p1-r4-X1I" secondAttribute="trailing" constant="10" id="gHq-9o-lzk"/>
                                                 <constraint firstAttribute="bottom" secondItem="rop-Y1-PPC" secondAttribute="bottom" constant="5" id="scH-i6-MiV"/>
                                             </constraints>
                                         </tableViewCellContentView>
