--- a/News API/View/Base.lproj/Main.storyboard
+++ b/News API/View/Base.lproj/Main.storyboard
@@ -17,7 +17,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="Q4u-57-saG">
-                                <rect key="frame" x="5" y="137" width="404" height="671"/>
+                                <rect key="frame" x="5" y="137" width="404" height="676"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="fQA-v7-GPI">
                                     <size key="itemSize" width="50" height="50"/>
@@ -43,7 +43,7 @@
                             <constraint firstItem="NgU-0d-64Z" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="BH9-wY-gdW"/>
                             <constraint firstItem="Q4u-57-saG" firstAttribute="top" secondItem="NgU-0d-64Z" secondAttribute="bottom" constant="5" id="Q9w-4R-d8Z"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Q4u-57-saG" secondAttribute="trailing" constant="5" id="aYP-Gg-3PH"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="Q4u-57-saG" secondAttribute="bottom" constant="5" id="wpG-0z-XGC"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="Q4u-57-saG" secondAttribute="bottom" id="wpG-0z-XGC"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
@@ -195,7 +195,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="rDA-lZ-dic" userLabel="Source CollectionView">
-                                <rect key="frame" x="0.0" y="136" width="414" height="677"/>
+                                <rect key="frame" x="5" y="136" width="404" height="677"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="w10-zX-8PX">
                                     <size key="itemSize" width="50" height="50"/>
@@ -227,8 +227,8 @@
                             <constraint firstItem="DLA-yn-YYu" firstAttribute="trailing" secondItem="n1w-CH-6Ju" secondAttribute="trailing" id="0vZ-kU-ltj"/>
                             <constraint firstItem="DLA-yn-YYu" firstAttribute="top" secondItem="n1w-CH-6Ju" secondAttribute="top" id="Ie9-Pz-Fpc"/>
                             <constraint firstItem="n1w-CH-6Ju" firstAttribute="bottom" secondItem="rDA-lZ-dic" secondAttribute="bottom" id="LYX-Vj-K6d"/>
-                            <constraint firstItem="rDA-lZ-dic" firstAttribute="leading" secondItem="n1w-CH-6Ju" secondAttribute="leading" id="gVG-c1-nz5"/>
-                            <constraint firstItem="n1w-CH-6Ju" firstAttribute="trailing" secondItem="rDA-lZ-dic" secondAttribute="trailing" id="kSK-DK-VQR"/>
+                            <constraint firstItem="rDA-lZ-dic" firstAttribute="leading" secondItem="n1w-CH-6Ju" secondAttribute="leading" constant="5" id="gVG-c1-nz5"/>
+                            <constraint firstItem="n1w-CH-6Ju" firstAttribute="trailing" secondItem="rDA-lZ-dic" secondAttribute="trailing" constant="5" id="kSK-DK-VQR"/>
                             <constraint firstItem="DLA-yn-YYu" firstAttribute="leading" secondItem="n1w-CH-6Ju" secondAttribute="leading" id="qcV-4h-NcR"/>
                             <constraint firstItem="rDA-lZ-dic" firstAttribute="top" secondItem="DLA-yn-YYu" secondAttribute="bottom" constant="4" id="wfU-Nk-s95"/>
                         </constraints>
